[package]
name = "oop-card-game"
version = "0.1.0"
authors = ["Robin Kock <robin@kock-hamburg.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
lazy_static = "1.4.0"
tokio = { version = "0.2", features = ["macros", "sync"] }
warp = "0.2"
serde = { version = "1.0.110", features = ["derive"] }
futures = "0.3.5"
base64 = "0.12.1"
pretty_env_logger = "0.4.0"
